<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/navigation_dashboard"
            android:title="@string/navigation_dashboard" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/navigation_add"
            android:title="@string/navigation_product" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/navigation_report"
            android:title="@string/navigation_reports" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/nav_feedback"
                android:title="Feedback" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>