<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layoutDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:id="@+id/id_card"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_white"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottom_layout"
                android:layout_alignParentTop="true"
                android:orientation="vertical">


                <RatingBar
                    android:id="@+id/product_rating"
                    style="?attr/ratingBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:numStars="5"
                    android:stepSize="1"
                    android:theme="@style/RatingBar2" />

                <com.neeru.client.views.ReaderFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/text_review"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp"
                    app:fontName="Roboto_Bold" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:ems="10"
                    android:hint="@string/hint_review"
                    android:inputType="textMultiLine" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right|bottom"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <com.neeru.client.views.ReaderFontTextView
                    android:id="@+id/mCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:text="@string/action_cancel"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="16sp" />

                <com.neeru.client.views.ReaderFontTextView
                    android:id="@+id/mSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="false"
                    android:text="@string/action_submit"
                    android:textColor="@color/colorBlueDark"
                    android:enabled="false"
                    android:textSize="16sp" />


            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center|top"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/mProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_avatar_default"
                    app:civ_border_color="@color/date_grey"
                    app:civ_border_width="2dp"/>
            </FrameLayout>
        </FrameLayout>


    </FrameLayout>


</FrameLayout>