<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_delivered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:contentPadding="@dimen/activity_horizontal_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/product_detail_imageHeight"
                            app:srcCompat="@drawable/ic_star_border" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/text_rating"
                            android:textColor="@color/colorBluelight"
                            android:textSize="@dimen/text_size_detail_menu"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/product_detail_imageHeight"
                            app:srcCompat="@drawable/ic_share" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/text_share"
                            android:textColor="@color/colorBluelight"
                            android:textSize="@dimen/text_size_detail_menu"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/product_detail_imageHeight"
                            app:srcCompat="@drawable/ic_website" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/text_website"
                            android:textColor="@color/colorBluelight"
                            android:textSize="@dimen/text_size_detail_menu"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/ractangle_border"
                    android:text="@string/text_book"
                    android:textColor="@color/colorBluelight"
                    android:textSize="20sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:contentPadding="@dimen/activity_horizontal_margin">

            <com.neeru.client.views.ReaderFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"
                android:text="Synonym for mineral water in India, Bisleri comes in all shapes and sizes. So no matter what you drinking water needs are, You can always count on us!"
                android:textColor="#515354"
                android:textSize="17sp"
                app:fontName="Roboto_Medium" />
        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>