<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neeru.client.RegisterationActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/mobile" />

    <com.neeru.client.views.ReaderFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/text_varify_number"
        android:textColor="@color/colortextBlack"
        android:textSize="25sp"
        app:fontName="Klavika_Bold" />


    <com.neeru.client.views.ReaderFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/text_varify_description"
        android:textColor="@color/colortextBlackLight"
        android:textSize="@dimen/text_size_price"
        app:fontName="Klavika_Regular_Plain" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/input_contact"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <com.neeru.client.views.ReaderFontTextView
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:gravity="center"
                android:maxLines="1"
                android:text="+91"
                android:textColor="@color/colortextBlack"
                android:textSize="@dimen/text_heading_size"
                app:fontName="Klavika_Bold" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorview" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:letterSpacing="0.25"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colortextBlack"
                android:textSize="30sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorview" />


        <com.dd.CircularProgressButton
            android:id="@+id/circularButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/cpb_white"
            android:textSize="24sp"
            app:cpb_cornerRadius="48dp"
            app:cpb_textIdle="@string/text_continue" />


    </LinearLayout>


</LinearLayout>
